# tsxapi4py2025

./: README.md  pyproject.toml  requirements.txt
examples/dom_surface_dashboard/: app.py  coordinator.py  index.html
scripts/: contract_monitor_cli.py
src/tsxapipy/: __init__.py
src/tsxapipy/monitor/: __init__.py  contract_universe.py  monitor.py
src/tsxapipy/real_time/: data_stream.py
